# programming_rust

./: .gitignore
code/chapter_10_enums_and_patterns/: Cargo.toml
code/chapter_10_enums_and_patterns/src/: binary_tree.rs  main.rs  patterns.rs  shape.rs  time.rs
code/chapter_11_traits_and_generics/: Cargo.toml  example.txt
code/chapter_11_traits_and_generics/src/: html.rs  main.rs  player.rs  sink.rs  string_set.rs  visible.rs
code/chapter_12_operator_overloading/: Cargo.toml
code/chapter_12_operator_overloading/src/: complex.rs  interval.rs  main.rs
code/chapter_13_utility_traits/: Cargo.toml
code/chapter_13_utility_traits/src/: main.rs
code/chapter_14_closures/: Cargo.toml
code/chapter_14_closures/src/: city.rs  main.rs
code/chapter_15_iterators/: Cargo.toml
code/chapter_15_iterators/src/: binary_tree.rs  bt_iterator.rs  main.rs  range.rs
code/chapter_16_collections/: Cargo.toml
code/chapter_17_strings_and_text/: Cargo.toml
code/chapter_18_input_and_output/: Cargo.toml
code/chapter_19_concurrency/: Cargo.toml
code/chapter_2/: Cargo.toml
code/chapter_21_macros/: Cargo.toml
code/chapter_6_expressions/: Cargo.toml
code/chapter_7_error_handling/: Cargo.toml
code/chapter_9_structs/: Cargo.toml
code/fern_sim/: Cargo.toml
code/fern_sim_test/: Cargo.toml
code/fern_sim_test/src/: lib.rs  simulation.rs  spores.rs
code/fern_sim_test/src/plant_structures/: leaves.rs  mod.rs  roots.rs  stems.rs
code/fern_sim_test/src/plant_structures/stems/: phloem.rs  xylem.rs
code/fern_sim_test/tests/: unfurl.rs
code/ranges/: Cargo.toml
(+64 files in other folders)
