[package]
name = "fern_sim_test"
version = "0.1.0"
authors = ["amarrerod <hola@gmail.com>"]
edition = "2018"
license = "MIT"
homepage = "https://github.com/"
repository = "https://github.com"
documentation = "https://github.com/"
description = "Sample package from Programming Rust 2nd Edition"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
